@@ -1,3 +1,4 @@
+* Add the context model name in the screen context
 * Add sum of records on list view
 * Add shortcuts to Date and DateTime widgets
 * Use limit to expand tree
